      ModelSpec-oriented constructors deprecated and new Assembler statics
      introduced.

      OntModelSpec now extends OntModelSpecObsolete, which holds (almost)
      all of the OntModelSpec's deprecated ModelSpec-oriented machinery. 
      OMSO will vanish after the next Jena release, when the remaining 
      ModelSpec code will evaporate.

==== Jena 2.5.2

RDQL support now in ARQ
    o Removed old RDQL engine
      Migrate to SPARQL, use ARQ instead and package com.hp.hpl.jena.query
      http://jena.sf.net/ARQ/ -- ARQ also supports RDQL as a legacy language

RDFException removed
    o Removed RDFException. It was obsolete (and recently deprecated). It's
      subclasses are now subclasses of JenaException.

rdfcat tool
	o The handling of command line arguments to rdfcat has changed slightly.
	  The input format (N3, RDF/XML, n-triple) argument, -n, -x and -t
	  respectively, now *only* affect the following argument. In previous
	  versions, the format was 'sticky' in that it persisted until another
	  input format argument was supplied. To set the default input format,
	  a new parameter -in has been added. See the rdfcat Javadoc for full
	  details.

==== Jena 2.5.1

Fix for test.bat not setting the classpath correctly.
Fix for PropertyNotFoundException from OntResourceImpl.getPropertyValue, not a null return.

==== Jena 2.5

ModelJEB is no longer supported
    o The ModelJEB BDB storage for graphs is no longer supported. (It
      has been unofficially unsupported for quite a while without
      complaint.) It's job -- cheap-and-cheerful persistent models -- has
      been taken over by HSQLDB.

RDFException has been deprecated
    o It has been obsolete [because of the JenaException revisions] for
      yonks. No-one should be using it (other than some internal uses
      to be excised.) It will be removed post-2.5.

Single-Element Unions [hence, OntModels]
    o If a union graph contains a single element, both find and queryHandler